zakura-rpc/src/methods/tests/snapshots/get_block_template_long_poll@mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: block_template
---
{
  "capabilities": [
    "proposal"
  ],
  "version": 4,
  "previousblockhash": "0000000000d723156d9b65ffcf4984da7a19675ed7e2f06d9e5d5188af087bf8",
  "blockcommitmentshash": "ccf70d31378bfec5405e606bb017c19ba66e9dd06385cbc175b69cc81ee862b8",
  "lightclientroothash": "ccf70d31378bfec5405e606bb017c19ba66e9dd06385cbc175b69cc81ee862b8",
  "finalsaplingroothash": "ccf70d31378bfec5405e606bb017c19ba66e9dd06385cbc175b69cc81ee862b8",
  "defaultroots": {
    "merkleroot": "0dd4c87d6aba52431fef01079578826b547a22e444af986368c507918f893e8a",
    "chainhistoryroot": "94470fa66ebd1a5fdb109a5aa3f3204f14de3a42135e71aa7f4c44055847e0b5",
    "authdataroot": "8bef9b5be6b99dc216611302b771e605f47ae4439bbd25f5e386052f6a78265d",
    "blockcommitmentshash": "ccf70d31378bfec5405e606bb017c19ba66e9dd06385cbc175b69cc81ee862b8"
  },
  "transactions": [],
  "coinbasetxn": {
    "data": "050000800a27a726b4d0d6c20000000041be1900010000000000000000000000000000000000000000000000000000000000000000ffffffff090341be1904f09f8cb8ffffffff0480b2e60e0000000017a9147e7e7e7e7e7e7e7e7e7e7e7e7e7e7e7e7e7e7e7e87286bee000000000017a914d45cb1adffb5215a42720532a076f02c7c778c908738c94d010000000017a91469a9f95a98fe581b6eb52841ef4806dc4402eb908740787d010000000017a914931fec54c1fea86e574462cc32013f5400b8912987000000",
    "hash": "0dd4c87d6aba52431fef01079578826b547a22e444af986368c507918f893e8a",
    "authdigest": "8bef9b5be6b99dc216611302b771e605f47ae4439bbd25f5e386052f6a78265d",
    "depends": [],
    "fee": 0,
    "sigops": 0,
    "required": true
  },
  "longpollid": "00016871043eab7f731654008728000000000000000000",
  "target": "0005555400000000000000000000000000000000000000000000000000000000",
  "mintime": 1654008606,
  "mutable": [
    "time",
    "transactions",
    "prevblock"
  ],
  "noncerange": "00000000ffffffff",
  "sigoplimit": 20000,
  "sizelimit": 2000000,
  "curtime": 1654008617,
  "bits": "1f055554",
  "height": 1687105,
  "maxtime": 1654008728,
  "submitold": false
}
